// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation collapses successfully at nested level 1`] = `
<DocumentFragment>
  .emotion-17 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-14 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-6:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-6:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-6:visited:not(:disabled) {
  color: #903D91;
}

<nav
    aria-label="Sidebar"
    class="emotion-17"
    role="navigation"
  >
    <ul
      class="emotion-14"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-14"
          role="list"
        >
          <li
            class="emotion-2"
          >
            <a
              class="emotion-6"
              href="/group2/page1"
            >
              <div
                class="emotion-1"
                data-testid="/group2/page1"
                tabindex="-1"
              >
                Group 2 Page 1
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-6"
              href="/group2/page2"
            >
              <div
                class="emotion-1"
                data-testid="/group2/page2"
                tabindex="-1"
              >
                Group 2 Page 2
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <div
              class="emotion-1"
              data-testid="/group2/group2b"
              tabindex="0"
            >
              Group 2b
              <svg
                class="emotion-0"
                viewBox="0 0 16 16"
              >
                <title>
                  close icon
                </title>
                <g
                  fill="none"
                >
                  <mask
                    fill="white"
                  >
                    <polygon
                      points="7 10 12 15 17 10"
                    />
                  </mask>
                  <polygon
                    fill="#666"
                    points="7 10 12 15 17 10"
                  />
                </g>
              </svg>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page after click group1 menu collapses 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page after enter key group1 menu collapses 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page by clicking on components menu, group1 menu collapses and group2 menu expands 1`] = `
<DocumentFragment>
  .emotion-17 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-14 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-6 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-6:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-6:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-6:visited:not(:disabled) {
  color: #903D91;
}

.emotion-4 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #01396E;
  cursor: pointer;
  font-weight: 500;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-4:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-4:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-4:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-4 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-4 a:visited {
  color: #0a0a0a;
}

<nav
    aria-label="Sidebar"
    class="emotion-17"
    role="navigation"
  >
    <ul
      class="emotion-14"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-4"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-14"
          role="list"
        >
          <li
            class="emotion-2"
          >
            <a
              class="emotion-6"
              href="/group2/page1"
            >
              <div
                class="emotion-1"
                data-testid="/group2/page1"
                tabindex="-1"
              >
                Group 2 Page 1
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <a
              class="emotion-6"
              href="/group2/page2"
            >
              <div
                class="emotion-1"
                data-testid="/group2/page2"
                tabindex="-1"
              >
                Group 2 Page 2
              </div>
            </a>
          </li>
          <li
            class="emotion-2"
          >
            <div
              class="emotion-1"
              data-testid="/group2/group2b"
              tabindex="0"
            >
              Group 2b
              <svg
                class="emotion-0"
                viewBox="0 0 16 16"
              >
                <title>
                  close icon
                </title>
                <g
                  fill="none"
                >
                  <mask
                    fill="white"
                  >
                    <polygon
                      points="7 10 12 15 17 10"
                    />
                  </mask>
                  <polygon
                    fill="#666"
                    points="7 10 12 15 17 10"
                  />
                </g>
              </svg>
            </div>
          </li>
        </ul>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on group 1 page renders as expected 1`] = `
<DocumentFragment>
  .emotion-11 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-5 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-4 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-4 .emotion-4,
.emotion-4 .emotion-4 .emotion-4 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

.emotion-3 {
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-3:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-3:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-3:visited:not(:disabled) {
  color: #903D91;
}

.emotion-2 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #01396E;
  cursor: pointer;
  font-weight: 500;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-2:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-2:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-2:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-2 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-2 a:visited {
  color: #0a0a0a;
}

<nav
    aria-label="Sidebar"
    class="emotion-11"
    role="navigation"
  >
    <ul
      class="emotion-5"
      role="list"
    >
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              open icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 14 12 9 17 14"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 14 12 9 17 14"
              />
            </g>
          </svg>
        </div>
        <ul
          class="emotion-5"
          role="list"
        >
          <li
            class="emotion-4"
          >
            <a
              class="emotion-3"
              href="/group1/page1"
            >
              <div
                class="emotion-2"
                data-testid="/group1/page1"
                tabindex="-1"
              >
                Group 1 Page 1
              </div>
            </a>
          </li>
        </ul>
      </li>
      <li
        class="emotion-4"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders as expected 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation on route level renders correctly without given path 1`] = `
<DocumentFragment>
  .emotion-7 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 18px;
  line-height: 1.5555555555555556;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  list-style-type: none;
  margin: 0;
}

.emotion-6 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-2 {
  list-style-type: none;
  margin: 0px;
  padding: 0 16px;
}

.emotion-2 .emotion-2,
.emotion-2 .emotion-2 .emotion-2 {
  padding-right: 0;
}

.emotion-1 {
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  background-color: transparent;
  box-sizing: border-box;
  color: #535353;
  cursor: pointer;
  font-weight: normal;
  min-height: 40px;
  padding-left: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-right: 24px;
  border-radius: 8px;
  text-overflow: ellipsis;
  overflow: hidden;
}

.emotion-1:hover {
  color: #2e2e2e;
  background-color: #6EB2F2;
}

.emotion-1:focus {
  outline: none;
  color: #FFFFFF;
  background-color: #0A68C1;
}

.emotion-1:focus svg polygon {
  fill: #FFFFFF;
}

.emotion-1 a {
  color: #0a0a0a;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: normal;
  width: 100%;
  height: 100%;
}

.emotion-1 a:visited {
  color: #0a0a0a;
}

.emotion-0 {
  fill: #2e2e2e;
  color: #2e2e2e;
  width: 16px;
  height: 16px;
  float: right;
}

<nav
    aria-label="Sidebar"
    class="emotion-7"
    role="navigation"
  >
    <ul
      class="emotion-6"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group1"
          tabindex="0"
        >
          Group 1
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-1"
          data-testid="/group2"
          tabindex="0"
        >
          Group 2
          <svg
            class="emotion-0"
            viewBox="0 0 16 16"
          >
            <title>
              close icon
            </title>
            <g
              fill="none"
            >
              <mask
                fill="white"
              >
                <polygon
                  points="7 10 12 15 17 10"
                />
              </mask>
              <polygon
                fill="#666"
                points="7 10 12 15 17 10"
              />
            </g>
          </svg>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
